--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,14 @@
+{% extends 'blog/base.html' %}
 
+     {% block content %}
+     {% for post in posts %}
+       <div class="post">
+            <div class="date">
+              {{ post.published_date }}
+            </div>
 
-<h1>Hola</h1>
-
-{% for p in posts %}
-
-<div>
-  <p>Publicado : {{ p.published_date }}</p>
-  <h1><a href="#">{{ p.title }}</a></h1>
-  <p>{{ p.text|linebreaksbr }}</p>
-</div>
-
-{% endfor %}
+       <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+           <p>{{ post.text|linebreaksbr }}</p>
+       </div>
+       {% endfor %}
+      {% endblock content %}
